--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@ h1 {
     font-weight: bold;
 }
 
+.paragraph{
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
 #lol {
     color: red;
 }
@@ -68,4 +73,14 @@ button {
 
 button:hover {
     background-color: #003d80;
+}
+
+form{
+    padding-left: 10px;
+}
+
+.fit{
+    max-width: 99%;
+    max-height: 99%;
+
 }
